Basic register page

--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -2,7 +2,7 @@
 {% extends "header.html" %}
 
 {% block body %}
-
+<!--TODO: add more padding to the page-->
 <div>
  <form action="" class="form-horizontal" method="post">
   <div class="form-group">
