--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,5 +1,7 @@
 {% macro nav_link(endpoint, name) %}
-{% if request.endpoint.endswith(endpoint) %}
+{% if request.endpoint == None %}
+  <li><a href="{{ url_for(endpoint) }}">{{name}}</a></li>
+{% elif request.endpoint.endswith(endpoint) %}
   <li class="active"><a href="{{ url_for(endpoint) }}">{{name}}</a></li>
 {% else %}
   <li><a href="{{ url_for(endpoint) }}">{{name}}</a></li>
