Create basic account set up, login and log out working

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
-{% from "macros.html" import nav_link with context %}
 <!DOCTYPE html>
+{% from "macros.html" import nav_link with context %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,8 +22,8 @@
 
 <!--   Header not bootstrap -->
   <header>
-        <h1>Animated Photo Banner</h1>
-        <p> Lorem ipsum dolor...</p>
+        <h1>Shop Front</h1>
+
 
 
 
@@ -105,6 +105,10 @@
 
 </div>
 
+  <!-- Bootstap JS -->
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+  <!-- End Bootstap JS -->
 
 
 </body>
