--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -2,32 +2,33 @@
 
 {% block body %}
 
-<div>
-
- <h3>Page code goes here</h3>
 
 <div class="row padding-sides">
- {% for entry in product_list %}
+    {% for entry in product_list %}
 
- <!--TODO set up all the values to come from database-->
- <!-- A product -->
-<div class="col-sm-6 col-md-3">
-    <div class="thumbnail">
-     <!--TODO change the values for the images-->
-      <img src="{{ url_for('static', filename='images/image_holder-200x240.png') }}"  alt="...">
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-        <h5>Price &euro;29.99</h5>
-       <!--TODO add value to product so as to allow bookmarking-->
-        <p><a href="/product_view/" class="btn btn-primary" role="button">View</a> <a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
-      </div>
-    </div>
-  </div>
+    <!--TODO set up all the values to come from database-->
+    <!-- A product -->
+    <form method="post">
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <!--TODO change the values for the images-->
+                <img src="{{ url_for('static', filename='images/image_holder-200x240.png') }}" alt="...">
 
- {% endfor %}
- </div>
+                <div class="caption">
+                    <h3>{{ entry[1] }}</h3>
+                    {{ entry[2] }}
+                    <!--<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>-->
+                    <h5>Price &euro;{{ entry[3] }}</h5>
 
+                    <!--TODO add value to product so as to allow bookmarking-->
+                    <p><input  class="btn btn-primary" role="button" type="submit" name="action" value="View">
+                        <input class="btn btn-default" role="button" type="submit" name="action" value="Add to Cart"></p>
+                    <input type="hidden" name="Product" value="{{ entry[0] }}">
+                </div>
+            </div>
+        </div>
+    </form>
+    {% endfor %}
 </div>
 
 {% endblock %}
