--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -21,8 +21,9 @@
                     <h5>Price &euro;{{ entry[3] }}</h5>
 
                     <!--TODO add value to product so as to allow bookmarking-->
-                    <p><input  class="btn btn-primary" role="button" type="submit" name="action" value="View">
-                        <input class="btn btn-default" role="button" type="submit" name="action" value="Add to Cart"></p>
+                    <p><input class="btn btn-primary" role="button" type="submit" name="action" value="View">
+                        <input class="btn btn-default" role="button" type="submit" name="action" value="Add to Cart">
+                    </p>
                     <input type="hidden" name="Product" value="{{ entry[0] }}">
                 </div>
             </div>
