--- a/templates/products/product_view.html
+++ b/templates/products/product_view.html
@@ -20,16 +20,6 @@
                     <img src="{{ url_for('static', filename='images/samples/75x90/' + image[0]) }}" alt="image[1]"
                          style="border: solid gray 1px">
                     {% endfor %}
-                    <!--
-                    <img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="..."
-                         style="border: solid gray 1px">
-                    <img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="..."
-                         style="border: solid gray 1px">
-                    <img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="..."
-                         style="border: solid gray 1px">
-                         -->
-
-
                 </div>
 
 
@@ -54,7 +44,7 @@
 
                 <div class="container">
                     <h3>Price: &euro;{{ product[3] }}</h3>
-                    <a class="btn btn-primary" href="#" role="button">Add to Cart</a>
+                    <input class="btn btn-default" role="button" type="submit" name="action" value="Add to Cart">
                 </div>
         </header>
 
@@ -84,11 +74,11 @@
                 <div class="well well-sm">We have added a new on.</div>
 
                 <!--  Form needs more work but will get the point across. It does need to react to users been logged_in or not.  -->
-                <form class="form-horizontal">
+                <form class="form-horizontal" method="post">
                     <h3>Leave your comment</h3>
                     <textarea class="form-control" rows="3"></textarea>
 
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="inputPassword3" class="col-sm-2 control-label">Your Rating</label>
 
                         <label class="radio-inline">
@@ -100,8 +90,11 @@
                         <label class="radio-inline">
                             <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
                         </label>
+                    </div> -->
+                    <div class="form-group">
+                    {{form.comment_rating(class_="radio-inline")}}
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <input class="btn btn-default" role="button" type="submit" name="action" value="Post Comment">
                 </form>
         </section>
     </article>
