--- a/templates/products/product_view.html
+++ b/templates/products/product_view.html
@@ -94,7 +94,7 @@
                         </label>
                     </div> -->
                     <div class="form-group">
-                    {{form.comment_rating(class_="radio-inline")}}
+                    {{form.comment_rating(class_="radio-inline", style="float: left;")}}
                     </div>
                     <input class="btn btn-default" role="button" type="submit" name="action" value="Post Comment">
                 </form>
