--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -2,9 +2,9 @@
 
 {% block body %}
 
-<div>
+<div style="margin-bottom: 10px;">
 
-    <div class="container col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4" style="text-align: center">
+    <div class="container col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4" style="text-align: center; height: 100%;">
         <form method="post">
             <div class="form-group" style="text-align: center">
                 <label for="form.email">Email address</label>
