--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <!--TODO: add more padding to the page-->
-<div>
+<div class="col-md-12 col-md-offset-3">
     <form action="" class="form-horizontal" method="post">
         <div class="form-group">
             <label for="first_name" class="col-sm-2 control-label">First Name</label>
@@ -39,8 +39,9 @@
                 {{ form.re_password(class_="form-control") }}
             </div>
         </div>
+        <!--TODO Button needs better pensioning-->
         <div class="form-group">
-            <input class="btn btn-success" type="submit" value="Create Job">
+            <input class="btn btn-success" type="submit" value="Register">
         </div>
     </form>
 
